--- a/JeuVaisseau/JeuVaisseau.csproj
+++ b/JeuVaisseau/JeuVaisseau.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Background.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="GameObject.cs" />
+    <Compile Include="Munitions.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Projectile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
